# resulting

./: .gitignore  README.md  pyproject.toml
result/: __init__.py  _traceback.py  option.py  result.py  wrappers.py
resulting/: __init__.py  _option.py  _result.py  _traceback.py  _wrappers.py
tests/: test_catch.py
